# SQLite-Totodoro

./: CMakeLists.txt  build_release_script.bat  conanfile.py  main.cpp
Connection/: IDatabaseConnection.h  SQLiteConnection.cpp  SQLiteConnection.h
DataStructure/: User.cpp  User.h
Database/: transaction.db3
Repository/: IUserRepository.h  UserRepository.cpp  UserRepository.h
